--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "dev": "microbundle watch",
     "test": "jest"
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@endemolshinegroup/cosmiconfig-typescript-loader": "^3.0.2",
     "ajv": "^6.12.6",
@@ -24,6 +29,7 @@
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.6",
+    "cz-conventional-changelog": "^3.3.0",
     "jest": "^26.6.3",
     "microbundle": "^0.12.4",
     "prettier": "^2.1.2",
