--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "microbundle src/index.ts -f modern,cjs --target node --no-compress",
     "dev": "microbundle watch",
+    "lint": "eslint {src,test}/**",
     "test": "jest"
   },
   "config": {
@@ -29,7 +30,11 @@
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "jest": "^26.6.3",
     "microbundle": "^0.12.4",
     "prettier": "^2.1.2",
