--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "microbundle src/index.ts -f modern,cjs --target node --no-compress",
     "dev": "microbundle watch",
+    "format": "prettier --check .",
     "lint": "eslint {src,test}/**",
     "test": "jest"
   },
