ci(lint): ignore test fixtures

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "es2021": true
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "ignorePatterns": "./test/fixtures",
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
