--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "microbundle src/index.ts -f modern,cjs --target node --no-compress",
     "dev": "microbundle watch",
     "format": "prettier --check .",
-    "lint": "eslint {src,test}/**",
+    "lint": "eslint {src,test}/**/*.ts",
     "test": "jest"
   },
   "config": {
