build: adjust scripts to build the library & CLI together

--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
   "repository": "ngryman/fauda",
   "main": "dist/fauda.js",
   "module": "dist/fauda.modern.js",
+  "types": "dist/fauda.d.ts",
   "scripts": {
-    "build": "microbundle src/index.ts -f modern,cjs --target node --no-compress",
-    "dev": "microbundle watch",
+    "build:cli": "microbundle cli.ts -o dist/cli.js -f cjs --target node",
+    "build:library": "microbundle index.ts -f modern,cjs --target node",
+    "build": "run-p build:*",
+    "postbuild": "rm -rf dist/test",
+    "dev:cli": "microbundle watch cli.ts -o dist/cli.js -f cjs --target node --no-compress",
+    "dev:library": "microbundle watch index.ts -f modern --target node --no-compress",
+    "dev": "run-p dev:*",
     "format": "prettier --check .",
     "lint": "eslint {src,test}/**/*.ts",
     "test": "jest"
@@ -38,6 +44,7 @@
     "eslint-config-prettier": "^6.15.0",
     "jest": "^26.6.3",
     "microbundle": "^0.12.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "type-fest": "^0.18.1",
