--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fauda",
   "version": "0.1.0-0",
-  "description": "Don't worry about configuration anymore.",
+  "description": "Configuration made simple.",
   "author": "Nicolas Gryman <ngryman@gmail.com> (https://ngryman.sh)",
   "license": "MIT",
   "repository": "ngryman/fauda",
