--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fauda",
-  "version": "0.1.0-0",
+  "version": "0.1.0",
   "description": "Configuration made simple.",
   "author": "Nicolas Gryman <ngryman@gmail.com> (https://ngryman.sh)",
   "license": "MIT",
